--- a/计算机网络/计算机网络/计算机网络.vcxproj.filters
+++ b/计算机网络/计算机网络/计算机网络.vcxproj.filters
@@ -33,4 +33,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="text.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
