--- a/计算机网络/计算机网络/计算机网络.vcxproj.filters
+++ b/计算机网络/计算机网络/计算机网络.vcxproj.filters
@@ -26,10 +26,10 @@
     <ClCompile Include="pch.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="计算机网络.cpp">
+    <ClCompile Include="Graph.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Graph.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
