--- a/计算机网络/计算机网络/计算机网络.vcxproj
+++ b/计算机网络/计算机网络/计算机网络.vcxproj
@@ -23,13 +23,13 @@
     <ProjectGuid>{FCE27F47-43E0-4512-A802-97126C7AB28F}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>计算机网络</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -166,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="text.txt" />
+    <Text Include="数据库.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
