我觉得不行

--- a/计算机网络/计算机网络/计算机网络.vcxproj
+++ b/计算机网络/计算机网络/计算机网络.vcxproj
@@ -166,7 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="text.txt" />
-    <Text Include="数据库.txt" />
+    <Text Include="DB.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
