--- a/计算机网络/计算机网络/计算机网络.vcxproj.filters
+++ b/计算机网络/计算机网络/计算机网络.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Dijkstra.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="text.txt">
